--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,5 +3,42 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/ux_1462099927_4295483/iconfont.css' />
   </head>
   <body>
+	<header>
+		<a class="bupt-icon icon-botton" href="http://www.bupt.edu.cn/"></a>
+		<a class="lab-icon icon-botton" href="/"></a>
+		<nav id="nav" class="nav">
+			<ul>
+				<li><a href="#welcome">欢迎</a></li>
+				<li><a href="#introduce">简介</a></li>
+				<li><a href="#products">产品</a></li>
+				<li><a href="#help">帮助</a></li>
+				<li><a href="#aboutus">关于</a></li>
+			</ul>
+		</nav>
+		<a class="button share-button" href="#share">分享</a>
+	</header>
+	<div id="page-cover"></div>
+	<div id="share">
+		<a href="#" class="close">
+			<span class="iconfont">&#xe607;</span>
+		</a>
+		<div class="share-content">
+			<div class="row">
+				<h6 class="share-title">复制链接</h6>
+				<div class="share-discription">
+					<input class="copy-text" type="text" value="bcnl.com/sdwsn"></input>
+				</div>
+			</div>
+			<div class="row">
+				<h6 class="share-title">或分享到</h6>
+				<div class="share-discription">
+					<a href="/">新浪微博</a>
+					<a href="/">印象笔记</a>
+					<a href="/">微信</a>
+				</div>
+			</div>
+		</div>
+	</div>
