--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,9 @@
 <% include header.ejs %>
-<div>
-<div class="svg_circle"></div>
+<div class="content">
+	<section id="welcome"><% include welcome.ejs %></section>
+	<section id="introduce"><% include introduce.ejs %></section>
+	<section id="products"><% include products.ejs %></section>
+	<section id="help"><% include help.ejs %></section>
+	<section id="aboutus"><% include aboutus.ejs %></section>
 </div>
 <% include footer.ejs %>
