--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,33 @@
+*{-webkit-box-sizing: border-box;box-sizing: border-box;}
+body{opacity: 1;background-color: #fff;color: #03034b;cursor: default;font-family: 'open-sans', 'Tahoma', 'Helvetica Neue', sans-serif;font-size: 70%;font-weight: 300;text-rendering: optimizeLegibility;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;line-height: 1;}
+header{position: fixed;top: 0;left: 0;width:100%;height: 93px;border-bottom: 1px solid #aaabbb;text-align: center;text-transform: uppercase;z-index: 9970;display: block;letter-spacing: 0.05em;font: 500 1.3em/1 'brandon-grotesque', Tahoma, 'Helvetica Neue', sans-serif;}
+a:link,a:visited{color: #03034b;text-decoration: none;transition: color .2s ease-in-out, border-color .2s ease-in-out;-webkit-transition: color .2s ease-in-out, border-color .2s ease-in-out;-webkit-tap-highlight-color: transparent;-webkit-tap-highlight-color: rgba(3,196,235,.05);}
+header a:link,header a:visited{color: #aaabbb;}
+header .button{font-size: 1em;}
+h6{position: absolute;color: #aaabbb;font-size: 100%;width: 100px;padding: 1px 0;margin: 1em auto;left: 0;right: 0;}
+nav{position:fixed;width: 100%;height: 91px;display: block;background-color: #ffffff;opacity: 1;}
+a {outline: none;transition: color .2s ease-in-out, border-color .2s ease-in-out;-webkit-transition: color .2s ease-in-out, border-color .2s ease-in-out;}
+ul{margin-top: 0px;list-style: none;}
+li{display: list-item;text-align: -webkit-match-parent;font-size: 100%;font-weight: 300;}
+svg{position:absolute;width:1100px;height:1100px;margin:0 auto;left: 0; right: 0;}
+section{position: absolute;width: 100%;height: 800px}
 
-div.svg_circle{margin: -20em auto auto auto;}
-svg{width:1300px;height:1300px;position:absolute;margin:auto;left: 0; right: 0;}
+.bupt-icon,.lab-icon{float: left;}
+.button{border: 1px solid;border-radius: 0.5em;display: inline-block;font: 500 1.3em/1 'brandon-grotesque', Tahoma, 'Helvetica Neue', sans-serif;padding: .75em;text-align: center;text-transform: uppercase;}
+.nav li{display: inline-block;}
+.nav a{display: inline-block;padding: 3em 1.5em;}
+.icon-botton,.share-button{position: absolute;top: 50%;right:3em;border-color: #f2f2f2;margin-top: -1.325em;}
+.svg_circle{position:absolute;width:90%;height: 800px;margin: 0 auto;left:0;right: 0;top:0;overflow: hidden;border-bottom: 1px solid;}
+.point {fill:#ffffff;stroke: #03c4eb;animation: mydot .3s cubic-bezier(0.47, 0, 0.75, 0.72) 4.2s;animation-fill-mode:forwards;-webkit-animation: mydot .3s cubic-bezier(0.47, 0, 0.75, 0.72) 4.2s;-webkit-animation-fill-mode:forwards;}
+.close .iconfont{position: absolute;width: 60px;height: 60px;margin: 0 auto;left: 0;right: 0;top: -1em;padding:.3em;border: 1px solid #e6e6ed; border-radius: 50%;font-size: 35px;color: #aaabbb;background-color: #fafafb;overflow: visible;transition: color .3s cubic-bezier(0.39, 0.58, 0.57, 1),background-color .3s cubic-bezier(0.39, 0.58, 0.57, 1),border-color .3s cubic-bezier(0.39, 0.58, 0.57, 1);-webkit-transition: color .3s cubic-bezier(0.39, 0.58, 0.57, 1),background-color .3s cubic-bezier(0.39, 0.58, 0.57, 1),border-color .3s cubic-bezier(0.39, 0.58, 0.57, 1);z-index: 9995}
+.share-content{display: block;position: absolute;width: 260px;height: 354px;margin: auto;left: 0;right: 0;top: 3em;text-align: center;}
+.row{position: relative;display: block;height: 160px;}
+.share-discription{position: relative;display: block;top: 4em;text-align: center;}
+.share-discription input{position: relative;width: 100%;height: 70px;left: 0;border:1px solid #BEEFF9;background-color: #FAFEFE;border-radius: 6%;font-size: 25px;font-weight: 400;color:03034b;text-align: center;}
+.share-discription a{position: relative;width: 150px;margin: 0 auto;left: 0;right: 0;display: block;font-size: 30px;color: #03034b;padding: 3px 0;border-bottom: 1px solid #f2f2f2;line-height: 1.5;}
+
+#page-cover{display: none;position: fixed;width: 100%;height: 100%;left: 0;top: 0;opacity: 0;background: #fff;display: none;transition: opacity .4s cubic-bezier(0.55, 0.06, 0.68, 0.19) .6s;-webkit-transition:opacity .4s cubic-bezier(0.55, 0.06, 0.68, 0.19) .6s;z-index: 9980;}
+#share{position: fixed;width: 350px;height: 500px;padding: auto;margin:auto;top: -700px;left: 0;right: 0;display:block;border:1px solid #f2f2f2;border-radius: 3%;background-color: #fff;transition: top .8s cubic-bezier(0.18, 0.89, 0.32, 1.28);-webkit-transition:top .8s cubic-bezier(0.18, 0.89, 0.32, 1.28);z-index: 9990;}
 #svgjs0,#svgjs1,#svgjs2,#svgjs3,#svgjs4{position:relative;transform-origin: center center;animation:myrotate_0 60s linear infinite;-webkit-animation:myrotate_0 60s linear infinite;}
 #svgjs0{animation-name:myrotate_0;-webkit-animation-name:myrotate_0;}
 #svgjs1{animation-name:myrotate_1;-webkit-animation-name:myrotate_1;}
@@ -8,7 +35,10 @@ svg{width:1300px;height:1300px;position:absolute;margin:auto;left: 0; right: 0;}
 #svgjs3{animation-name:myrotate_3;-webkit-animation-name:myrotate_3;}
 #svgjs4{animation-name:myrotate_4;-webkit-animation-name:myrotate_4;}
 #svgjs0g,#svgjs1g,#svgjs2g,#svgjs3g,#svgjs4g {fill:transparent;}
-.point {fill:#ffffff;stroke: #03c4eb;animation: mydot 2s cubic-bezier(0.47, 0, 0.75, 0.72);animation-fill-mode:forwards;-webkit-animation: mydot 2s cubic-bezier(0.47, 0, 0.75, 0.72);-webkit-animation-fill-mode:forwards;}
+
+
+::selection {background: #03c4eb;color: #000;}
+
 @keyframes myrotate_0 {0% {transform:rotate(0deg);} 100% {transform:rotate(360deg);}}
 @keyframes myrotate_1 {0% {transform:rotate(288deg);} 40%{transform:rotate(144deg);} 80%{transform:rotate(0deg);} 100% {transform:rotate(-72deg);}}
 @keyframes myrotate_2 {0% {transform:rotate(72deg);} 80%{transform:rotate(360deg);} 100% {transform:rotate(432deg);}}
@@ -21,4 +51,3 @@ svg{width:1300px;height:1300px;position:absolute;margin:auto;left: 0; right: 0;}
 @-webkit-keyframes myrotate_4 {0% {-webkit-transform:rotate(144deg);} 40%{-webkit-transform:rotate(0deg);} 100% {-webkit-transform:rotate(504deg);}}
 @keyframes mydot{0%{opacity:0;}100% {opacity:1;}}
 @-webkit-keyframes mydot{0%{opacity:0;}100% {opacity:1;}}
-
