--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="javascripts/svg.js"></script>
+<script type="text/javascript" src="javascripts/script.js"></script>
 <script type="text/javascript" src="javascripts/jquery.js"></script>
 </body>
 </html>
