--- a/views/header.ejs
+++ b/views/header.ejs
@@ -42,3 +42,19 @@
 			</div>
 		</div>
 	</div>
+	<div class="SDWSN">
+		<div class="guide">
+			<div class="guide-position">
+				<a href="#info" class="info-guide"> 基本信息 </a>
+				<a href="#service"class="service-guide">业务处理</a>
+				<a href="#network" class="network-guide">网络维护</a>
+			</div>
+		</div>
+		<div>
+			<div id="info" class="sdwsn info"><% include sdwsnInfo.ejs %></div>
+			<div id="service" class="sdwsn service"><% include sdwsnService.ejs %></div>
+			<div id="network" class="sdwsn network"><% include sdwsnNetwork.ejs %></div>
+		</div>
+	</div>
+	
+	
