--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,6 +1,10 @@
 <div class="subsection welcome-front" >
 	<div class="svg_circle"></div>
 	<div class="container" >
-		<div></div>
+		<h1 class="section-title">
+			<span class="school">BUPT</span>
+			<span class="lab">BCNL</span>
+			<span class="title">Software Defined WSN</span>
+		</h1>
 	</div>
 </div>
